--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <h3> HELLO! WELCOME TO MY PAGE OF ART AND MUSINGS. I HOPE YOU ENJOY YOUR STAY! </h3> 
-     <img src="SELFIE.jpg" alt="handsomeape" width="500px"> 
+     <img src="mike.jpg" alt="handsomeape" width="500px"> 
     <h3> THAT HANDSOME APE IS ME! GO PHILS! </h3>
    
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js" integrity="sha512-WJXVjqeINVpi5XXJ2jn0BSCfp0y80IKrYh731gLRnkAS9TKc5KNt/OfLtu+fCueqdWniouJ1ubM+VI/hbo7POQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
