--- a/contact!.html
+++ b/contact!.html
@@ -34,7 +34,7 @@
     
 <p>MICHAELKULKA@ICLOUD.COM</p>
 <p>267-614-3123</p>
-<p>INSTAGRAM: MIKEFUCKINGKULKA</p>
+<p>INSTAGRAM: MIKEKULKA19</p>
 <p>THE EMAIL AND INSTAGRAM IS ALL LOWERCASE, I AM KEEPING IT UPPERCASE FOR THE AESTHETIC!</p>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js" integrity="sha512-WJXVjqeINVpi5XXJ2jn0BSCfp0y80IKrYh731gLRnkAS9TKc5KNt/OfLtu+fCueqdWniouJ1ubM+VI/hbo7POQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
